Update perpindahan halaman

--- a/platforms/android/app/src/main/res/xml/config.xml
+++ b/platforms/android/app/src/main/res/xml/config.xml
@@ -35,12 +35,12 @@
     <feature name="Vibration">
         <param name="android-package" value="org.apache.cordova.vibration.Vibration" />
     </feature>
-    <name>helloworld</name>
+    <name>Pusat Riyal</name>
     <description>
-        Hello World sample application that responds to the deviceready event.
+        Sistem Informasi Pusat Riyal.
     </description>
     <author email="support@phonegap.com" href="http://phonegap.com">
-        PhoneGap Team
+        syaifudinhadi8@gmail.com
     </author>
     <content src="index.html" />
     <access origin="*" />
