Penambahan parameter callback untuk navigasi halaman

--- a/platforms/android/app/src/main/assets/www/includes/manasik/preview-perencanaan.html
+++ b/platforms/android/app/src/main/assets/www/includes/manasik/preview-perencanaan.html
@@ -99,9 +99,15 @@
     }
 </style>
 
-<button class="btn btn-primary rounded-btn">
-  <i class="fa fa-check"></i>
-</button>
+<div class="pusatriyal-submit btn-group">
+  
+  <button class="btn btn-primary btn-md">
+    <i class="fa fa-pencil"></i>
+  </button>
+  <button class="btn btn-danger btn-md">
+    <i class="fa fa-trash-o"></i>
+  </button>
+</div>
 <h5 class="title-edit">Preview Perencanaan Kegiatan Manasik</h5>
 <form id="login-form" class="form" action="" method="post" autocomplete="off" style="margin-bottom: 25mm">
 <input type="hidden" name="_token" id="_token">
