--- a/platforms/android/app/src/main/assets/www/includes/manasik/form-perencanaan.html
+++ b/platforms/android/app/src/main/assets/www/includes/manasik/form-perencanaan.html
@@ -1,161 +1,169 @@
 <div class="subcontent" style="">
-<style>
-    body {
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-    }
+  <style>
+  body {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+  }
 
-    .title-edit
-    {
-        margin-top: 60px;
-        margin-left: 20px;
-        margin-bottom: 30px;
-        width: 70%;
-        border: none;
-        color: #14c56d;
-    }
-
-    .btnSubmit
-    {
-        border-radius: 50mm;
-        margin-top: 8mm;
-        margin-bottom: 50px;
-        padding: 3mm 10mm;
-        border: none;
-        cursor: pointer;
-        background: #42ec98;
-        color: #FFFFFF;
-        font-weight: bold;
-        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-    }
-    .border-bottom-1 {
-        border-bottom: 2px solid #42ec98 !important;
-    }
-    .label-for
-    {
-      font-weight: bold;
-      color: #646464ff;
-      margin-bottom: 0px;
-    }
-    .listx
-    {
-      font-weight: bold;
-    }
-
-    .card-body {
-      border-bottom:1px solid #e7e7e7;
-    }
-    .card {
-      margin-left: 4mm;
-      margin-right: 4mm;
-      margin-bottom: 10mm;
-    }
-    
-    body {
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-    }
-    #login .container #login-row #login-column #login-box {
+  .title-edit
+  {
       margin-top: 60px;
-      max-width: 600px;
-      height: 320px;
-    }
-    #login .container #login-row #login-column #login-box #login-form {
-      padding: 26px;
-      margin-bottom: 35mm;
-    }
-    #login .container #login-row #login-column #login-box #login-form #register-link {
-      margin-top: -85px;
-    }
+      margin-left: 20px;
+      margin-bottom: 30px;
+      width: 70%;
+      border: none;
+      color: #14c56d;
+  }
 
-
-    .btnSubmit
-    {
-        border-radius: 50mm;
-        margin-top: 8mm;
-        margin-bottom: 50px;
-        padding: 3mm 10mm;
-        border: none;
-        cursor: pointer;
-        background: #42ec98;
-        color: #FFFFFF;
-        font-weight: bold;
-        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-    }
-    .border-bottom-1 {
-        border-bottom: 2px solid #42ec98 !important;
-    }
-    .label-for
-    {
+  .btnSubmit
+  {
+      border-radius: 50mm;
+      margin-top: 8mm;
+      margin-bottom: 50px;
+      padding: 3mm 10mm;
+      border: none;
+      cursor: pointer;
+      background: #42ec98;
+      color: #FFFFFF;
       font-weight: bold;
-      color: #646464ff;
-      margin-bottom: 0px;
-    }
-    form {
-      padding-left: 5mm;
-      padding-right: 5mm;
-    }
-</style>
+      box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  }
+  .border-bottom-1 {
+      border-bottom: 2px solid #42ec98 !important;
+  }
+  .label-for
+  {
+    font-weight: bold;
+    color: #646464ff;
+    margin-bottom: 0px;
+  }
+  .listx
+  {
+    font-weight: bold;
+  }
 
-<button class="btn btn-primary rounded-btn">
-  <i class="fa fa-check"></i>
-</button>
-<h5 class="title-edit">Form Perencanaan Kegiatan Manasik</h5>
-<form id="login-form" class="form" action="" method="post" autocomplete="off" style="margin-bottom: 25mm">
-<input type="hidden" name="_token" id="_token">
-                            <div class="form-group">
-                                <label class="label-for" for="nota">Nota</label><br>
-                                <div class="border-bottom-1">
-                                  <input type="text" name="nota" id="nota" class="form-control-plaintext" placeholder="( Auto )" readonly>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="label-for" for="tgl_kegiatan" >Tanggal Kegiatan</label><br>
-                                <div class="border-bottom border-bottom-1">
-                                  <input type="text" name="mp_date" id="tgl_kegiatan" class="form-control-plaintext" placeholder="01/01/2019">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="tempat_kegiatan" class="label-for">Tempat Kegiatan</label><br>
-                                <div class="border-bottom border-bottom-1">
-                                  <input type="text" name="tempat_kegiatan" id="tempat_kegiatan" class="form-control-plaintext" placeholder="Jeddah">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="pic" class="label-for">PIC</label><br>
-                                <div class="border-bottom border-bottom-1">
-                                  <input type="text" name="pic" id="pic" class="form-control-plaintext" placeholder="Sujali">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="kegiatan" class="label-for">Kegiatan</label><br>
-                                <div class="border-bottom border-bottom-1">
-                                  <input type="text" name="kegiatan" id="kegiatan" class="form-control-plaintext" placeholder="Thawaf">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="pet_1" class="label-for">Petugas Kegiatan 1</label><br>
-                                <div class="border-bottom border-bottom-1">
-                                  <input type="text" name="pet_1" id="pet_1" class="form-control-plaintext" placeholder="Ari" >
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="pet_2" class="label-for">Petugas Kegiatan 2</label><br>
-                                <div class="border-bottom border-bottom-1">
-                                  <input type="text" name="pet_2" id="pet_2" class="form-control-plaintext" placeholder="Gupoh" >
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="pet_3" class="label-for">Petugas Kegiatan 3</label><br>
-                                <div class="border-bottom border-bottom-1">
-                                  <input type="text" name="pet_3" id="pet_3" class="form-control-plaintext" placeholder="Pali" >
-                                </div>
-                            </div>
-                            <div class="form-group">
-                            </div>
-                        </form>
+  .card-body {
+    border-bottom:1px solid #e7e7e7;
+  }
+  .card {
+    margin-left: 4mm;
+    margin-right: 4mm;
+    margin-bottom: 10mm;
+  }
+
+  body {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+  }
+  #login .container #login-row #login-column #login-box {
+    margin-top: 60px;
+    max-width: 600px;
+    height: 320px;
+  }
+  #login .container #login-row #login-column #login-box #login-form {
+    padding: 26px;
+    margin-bottom: 35mm;
+  }
+  #login .container #login-row #login-column #login-box #login-form #register-link {
+    margin-top: -85px;
+  }
+
+
+  .btnSubmit
+  {
+      border-radius: 50mm;
+      margin-top: 8mm;
+      margin-bottom: 50px;
+      padding: 3mm 10mm;
+      border: none;
+      cursor: pointer;
+      background: #42ec98;
+      color: #FFFFFF;
+      font-weight: bold;
+      box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  }
+  .border-bottom-1 {
+      border-bottom: 2px solid #42ec98 !important;
+  }
+  .label-for
+  {
+    font-weight: bold;
+    color: #646464ff;
+    margin-bottom: 0px;
+  }
+  form {
+    padding-left: 5mm;
+    padding-right: 5mm;
+  }
+  </style>
+
+  <button class="btn btn-primary rounded-btn" onclick="validate_form();insert_perencanaan();">
+    <i class="fa fa-check"></i>
+  </button>
+  <h5 class="title-edit">Form Perencanaan Kegiatan Manasik</h5>
+  <form id="login-form" class="form" action="" method="post" autocomplete="off" style="margin-bottom: 25mm">
+    <input type="hidden" name="_token" id="_token">
+    <div class="form-group">
+        <label class="label-for" for="nota">Nota</label><br>
+        <div class="border-bottom-1">
+          <input type="text" name="nota" id="nota" class="form-control-plaintext" placeholder="( Auto )" readonly>
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="label-for" for="tgl_perencanaan" >Tanggal Kegiatan</label><br>
+        <div class="border-bottom border-bottom-1">
+          <input type="text" name="tgl_perencanaan" id="tgl_perencanaan" class="form-control-plaintext">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="tempat" class="label-for">Tempat Kegiatan</label><br>
+        <div class="border-bottom border-bottom-1">
+          <input type="text" name="tempat" id="tempat" class="form-control-plaintext" >
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="pic" class="label-for">PIC</label><br>
+        <div class="border-bottom border-bottom-1">
+           <select class="form-control-plaintext" name="pic" id="pic">
+            <option value="" selected="" disabled="">--Pilih--</option>
+          </select>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="aktifitas" class="label-for">Kegiatan</label><br>
+        <div class="border-bottom border-bottom-1">
+          <input type="text" name="aktifitas" id="aktifitas" class="form-control-plaintext" >
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="pet_1" class="label-for">Petugas Kegiatan 1</label><br>
+        <div class="border-bottom border-bottom-1">
+          <select class="form-control-plaintext" id="petugas1" name="petugas1">
+            <option value="" selected="" disabled="">--Pilih--</option>
+          </select>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="pet_2" class="label-for">Petugas Kegiatan 2</label><br>
+        <div class="border-bottom border-bottom-1">
+          <select class="form-control-plaintext" id="petugas2" name="petugas2">
+            <option value="" selected="" disabled="">--Pilih--</option>
+          </select>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="pet_3" class="label-for">Petugas Kegiatan 3</label><br>
+        <div class="border-bottom border-bottom-1">
+          <select class="form-control-plaintext" id="petugas3" name="petugas3">
+            <option value="" selected="" disabled="">--Pilih--</option>
+          </select>
+        </div>
+    </div>
+    <div class="form-group">
+    </div>
+  </form>
 
     <script type="text/javascript" src="includes/manasik/js/form-perencanaan-commander.js"></script>
 </div>
