--- a/platforms/android/app/src/main/assets/www/includes/manasik/preview-perencanaan.html
+++ b/platforms/android/app/src/main/assets/www/includes/manasik/preview-perencanaan.html
@@ -101,67 +101,70 @@
 
 <div class="pusatriyal-submit btn-group">
   
-  <button class="btn btn-primary btn-md">
+  <button class="btn btn-primary btn-md" id="btn-edit" 
+    pusatriyal-role='routing' 
+    pusatriyal-target='includes/manasik/edit_perencanaan.html'pusatriyal-callback="edit_perencanaan_view">
     <i class="fa fa-pencil"></i>
   </button>
-  <button class="btn btn-danger btn-md">
+  <button class="btn btn-danger btn-md" id="btn-hapusperencanaan">
     <i class="fa fa-trash-o"></i>
   </button>
 </div>
 <h5 class="title-edit">Preview Perencanaan Kegiatan Manasik</h5>
 <form id="login-form" class="form" action="" method="post" autocomplete="off" style="margin-bottom: 25mm">
 <input type="hidden" name="_token" id="_token">
-                            <div class="form-group">
-                                <label class="label-for" for="nota">Nota</label><br>
-                                <div class="border-bottom-1" id="mp_code">
-                                  <input type="text" name="nota" id="nota" class="form-control-plaintext" placeholder="( Auto )" readonly>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="label-for" for="tgl_kegiatan" >Tanggal Kegiatan</label><br>
-                                <div class="border-bottom border-bottom-1" id="tanggal">
-                                  <input type="text" name="mp_date" id="tgl_kegiatan" class="form-control-plaintext" placeholder="01/01/2019">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="tempat_kegiatan" class="label-for">Tempat Kegiatan</label><br>
-                                <div class="border-bottom border-bottom-1" id="mp_place">
-                                  <input type="text" name="tempat_kegiatan" id="tempat_kegiatan" class="form-control-plaintext" placeholder="Jeddah">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="pic" class="label-for">PIC</label><br>
-                                <div class="border-bottom border-bottom-1" id="petugas_pic">
-                                  <input type="text" name="pic" id="pic" class="form-control-plaintext" placeholder="Sujali">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="kegiatan" class="label-for">Kegiatan</label><br>
-                                <div class="border-bottom border-bottom-1" id="mp_plan_activity">
-                                  <input type="text" name="kegiatan" id="kegiatan" class="form-control-plaintext" placeholder="Thawaf" >
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="pet_1" class="label-for">Petugas Kegiatan 1</label><br>
-                                <div class="border-bottom border-bottom-1" id="mp_employe1">
-                                  <input type="text" name="pet_1" id="pet_1" class="form-control-plaintext" placeholder="Ari" >
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="pet_2" class="label-for">Petugas Kegiatan 2</label><br>
-                                <div class="border-bottom border-bottom-1"  id="mp_employe2">
-                                  <input type="text" name="pet_2" id="pet_2" class="form-control-plaintext" placeholder="Gupoh" >
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="pet_3" class="label-for">Petugas Kegiatan 3</label><br>
-                                <div class="border-bottom border-bottom-1"  id="mp_employe3">
-                                  <input type="text" name="pet_3" id="pet_3" class="form-control-plaintext" placeholder="Pali" >
-                                </div>
-                            </div>
-                            <div class="form-group">
-                            </div>
-                        </form>
+<input type="hidden" name="mp_id" id="mp_id">
+    <div class="form-group">
+        <label class="label-for" for="nota">Nota</label><br>
+        <div class="border-bottom-1" id="mp_code">
+          <input type="text" readonly="" name="nota" id="nota" class="form-control-plaintext"  readonly>
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="label-for" for="tgl_kegiatan" >Tanggal Kegiatan</label><br>
+        <div class="border-bottom border-bottom-1" id="tanggal">
+          <input type="text" readonly="" name="mp_date" id="tgl_kegiatan" class="form-control-plaintext" >
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="tempat_kegiatan" class="label-for">Tempat Kegiatan</label><br>
+        <div class="border-bottom border-bottom-1" id="mp_place">
+          <input type="text" readonly="" name="tempat_kegiatan" id="tempat_kegiatan" class="form-control-plaintext" >
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="pic" class="label-for">PIC</label><br>
+        <div class="border-bottom border-bottom-1" id="petugas_pic">
+          <input type="text" readonly="" name="pic" id="pic" class="form-control-plaintext" >
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="kegiatan" class="label-for">Kegiatan</label><br>
+        <div class="border-bottom border-bottom-1" id="mp_plan_activity">
+          <input type="text" readonly="" name="kegiatan" id="kegiatan" class="form-control-plaintext"  >
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="pet_1" class="label-for">Petugas Kegiatan 1</label><br>
+        <div class="border-bottom border-bottom-1" id="mp_employe1">
+          <input type="text" readonly="" name="pet_1" id="pet_1" class="form-control-plaintext"  >
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="pet_2" class="label-for">Petugas Kegiatan 2</label><br>
+        <div class="border-bottom border-bottom-1"  id="mp_employe2">
+          <input type="text" readonly="" name="pet_2" id="pet_2" class="form-control-plaintext" >
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="pet_3" class="label-for">Petugas Kegiatan 3</label><br>
+        <div class="border-bottom border-bottom-1"  id="mp_employe3">
+          <input type="text" readonly="" name="pet_3" id="pet_3" class="form-control-plaintext"  >
+        </div>
+    </div>
+    <div class="form-group">
+    </div>
+</form>
 
     <script type="text/javascript" src="includes/manasik/js/form-perencanaan-commander.js"></script>
 </div>
