--- a/platforms/android/app/src/main/assets/www/includes/manasik/menu-manasik.html
+++ b/platforms/android/app/src/main/assets/www/includes/manasik/menu-manasik.html
@@ -47,9 +47,16 @@
 
 <h5 class="title-edit">Kegiatan Manasik</h5>
 <div class="list-group list-group-flush">
-  <a href="#" class="list-group-item list-group-item-action listx"  pusatriyal-role='routing' pusatriyal-target='/includes/manasik/index-perencanaan.html'>Perencanaan Kegiatan Manasik</a>
-  <a href="#" class="list-group-item list-group-item-action listx" pusatriyal-role='routing' pusatriyal-target='/includes/manasik/index-pelaksanaan.html'>Pelaksanaan Kegiatan Manasik</a>
-  <a href="#" class="list-group-item list-group-item-action listx"  pusatriyal-role='routing' pusatriyal-target='/includes/manasik/index-penjualan.html'>Penjualan Kegiatan Manasik</a>
+
+  <a href="#" class="list-group-item list-group-item-action listx"  
+  pusatriyal-role='routing' pusatriyal-callback='notif' 
+  pusatriyal-target='includes/manasik/perencanaan_manasik/index-perencanaan.html'>Perencanaan Kegiatan Manasik</a>
+  <a href="#" class="list-group-item list-group-item-action listx" 
+  pusatriyal-role='routing' 
+  pusatriyal-target='includes/manasik/perencanaan_manasik/index-pelaksanaan.html'>Pelaksanaan Kegiatan Manasik</a>
+  <a href="#" class="list-group-item list-group-item-action listx"  
+  pusatriyal-role='routing' 
+  pusatriyal-target='includes/manasik/perencanaan_manasik/index-penjualan.html'>Penjualan Kegiatan Manasik</a>
 </div>
 
 </div>
