--- a/platforms/android/app/src/main/assets/www/includes/distribusi/menu-distribusi-retail.html
+++ b/platforms/android/app/src/main/assets/www/includes/distribusi/menu-distribusi-retail.html
@@ -45,7 +45,10 @@
 </style>
 
 
-<h5 class="title-edit">Kegiatan Distribusi Retail</h5>
+<div class="breadcrumb-pusatriyal">
+  <span>Kegiatan Distribusi</span>
+  <span class="active">Distribusi Retail</span>
+</div>
 <div class="list-group list-group-flush">
   <a href="#" class="list-group-item list-group-item-action listx">Pencatatan Petugas</a>
   <a href="#" class="list-group-item list-group-item-action listx">GPS Tracking</a>
