--- a/www/includes/manasik/pelaksanaan_manasik/tab_produk_dikembalikan/index-tab-dikembalikan.html
+++ b/www/includes/manasik/pelaksanaan_manasik/tab_produk_dikembalikan/index-tab-dikembalikan.html
@@ -54,16 +54,22 @@
 
 </style>
 
-<button class="btn btn-primary rounded-btn" pusatriyal-role='routing' pusatriyal-target='includes/manasik/perencanaan_manasik/form-perencanaan.html'>
+<button class="btn btn-primary rounded-btn" pusatriyal-role='routing' pusatriyal-target='includes/manasik/pelaksanaan/tab_produk_dikembalikan/form-tab-pelaksanaan.html'>
   <i class="fa fa-plus"></i>
 </button>
 <div class="breadcrumb-pusatriyal">
   <span>Kegiatan Manasik</span>
-  <span class="active">Perencanaan Kegiatan Manasik</span>
+  <span>Pelaksanaan Kegiatan Manasik</span>
+  <span class="active">Produk yang dikembalikan</span>
 </div>
 <div class="card maincard">
-   
+  <div class="card-body">
+    <h5 class="card-title">Card title</h4>
+    <h6 class="card-subtitle" style="margin-bottom: 1mm">Some example text. Some example text.</h6>
+    <a href="#" class="badge badge-primary card-info-first">Card link</a>
+    <a href="#" class="badge badge-success card-info-second">Another link</a>
   </div>
+</div>
 
   <rawcontent class='datalist'>
     <div class="card-body">
@@ -73,5 +79,5 @@
       <a href="#" class="badge badge-success card-info-second">Another link</a>
     </div>
   </rawcontent>
-  <script type="text/javascript" src="includes/manasik/perencanaan_manasik/js/index-perencanaan-commander.js"></script>
+  <script type="text/javascript" src="includes/manasik/pelaksanaan/tab_produk_dikembalikan/js/index-tab-pelaksanaan-commander.js"></script>
 </div>
