--- a/www/includes/manasik/perencanaan_manasik/edit_perencanaan.html
+++ b/www/includes/manasik/perencanaan_manasik/edit_perencanaan.html
@@ -105,7 +105,12 @@
       <i class="fa fa-check"></i>
     </button>
   </div>
-  <h5 class="title-edit">Edit Perencanaan Kegiatan Manasik</h5>
+  <div class="breadcrumb-pusatriyal">
+    <span>Kegiatan Manasik</span>
+    <span>Perencanaan Kegiatan Manasik</span>
+    <span>Preview Perencanaan Kegiatan Manasik</span>
+    <span class="active">Edit Perencanaan Kegiatan Manasik</span>
+  </div>
   <form id="login-form" class="form" action="" method="post" autocomplete="off" style="margin-bottom: 25mm">
     <input type="hidden" name="_token" id="_token">
     <input type="hidden" name="mp_id" id="mp_id">
