--- a/platforms/browser/www/includes/manasik/menu-manasik.html
+++ b/platforms/browser/www/includes/manasik/menu-manasik.html
@@ -45,17 +45,19 @@
 </style>
 
 
-<h5 class="title-edit">Kegiatan Manasik</h5>
+<div class="breadcrumb-pusatriyal">
+  <span class="active">Kegiatan Manasik</span>
+</div>
 <div class="list-group list-group-flush">
   <a href="#" class="list-group-item list-group-item-action listx"  
   pusatriyal-role='routing' pusatriyal-callback='notif' 
   pusatriyal-target='includes/manasik/perencanaan_manasik/index-perencanaan.html'>Perencanaan Kegiatan Manasik</a>
   <a href="#" class="list-group-item list-group-item-action listx" 
   pusatriyal-role='routing' 
-  pusatriyal-target='includes/manasik/perencanaan_manasik/index-pelaksanaan.html'>Pelaksanaan Kegiatan Manasik</a>
+  pusatriyal-target='includes/manasik/pelaksanaan_manasik/index-pelaksanaan.html'>Pelaksanaan Kegiatan Manasik</a>
   <a href="#" class="list-group-item list-group-item-action listx"  
   pusatriyal-role='routing' 
-  pusatriyal-target='includes/manasik/perencanaan_manasik/index-penjualan.html'>Penjualan Kegiatan Manasik</a>
+  pusatriyal-target='includes/manasik/penjualan_manasik/index-penjualan.html'>Penjualan Kegiatan Manasik</a>
 </div>
 
 </div>
