--- a/www/includes/distribusi/menu-distribusi-corporate.html
+++ b/www/includes/distribusi/menu-distribusi-corporate.html
@@ -45,7 +45,10 @@
 </style>
 
 
-<h5 class="title-edit">Kegiatan Distribusi Corporate</h5>
+<div class="breadcrumb-pusatriyal">
+  <span>Kegiatan Distribusi</span>
+  <span class="active">Distribusi Corporate</span>
+</div>
 <div class="list-group list-group-flush">
   <a href="#" class="list-group-item list-group-item-action listx">Pencatatan & Pengelolaan Agen</a>
   <a href="#" class="list-group-item list-group-item-action listx">Pencatatan Data Pemesanan Pencataan Riyal</a>
