--- a/www/includes/manasik/pelaksanaan_manasik/index-pelaksanaan.html
+++ b/www/includes/manasik/pelaksanaan_manasik/index-pelaksanaan.html
@@ -45,13 +45,20 @@
 </style>
 
 
+
 <div class="breadcrumb-pusatriyal">
-  <span>Kegiatan Distribusi</span>
-  <span class="active">Distribusi Retail</span>
+  <span>Kegiatan Manasik</span>
+  <span class="active">Pelaksanaan Kegiatan Manasik</span>
 </div>
 <div class="list-group list-group-flush">
-  <a href="#" class="list-group-item list-group-item-action listx">Pencatatan Petugas</a>
-  <a href="#" class="list-group-item list-group-item-action listx">GPS Tracking</a>
+  <a href="#" class="list-group-item list-group-item-action listx"  
+  pusatriyal-role='routing' pusatriyal-callback='notif' 
+  pusatriyal-target='includes/manasik/pelaksanaan_manasik/tab_pelaksanaan_manasik/index-tab-pelaksanaan.html'>List Pelaksanaan Kegiatan Manasik</a>
+  <a href="#" class="list-group-item list-group-item-action listx" 
+  pusatriyal-role='routing' 
+  pusatriyal-target='includes/manasik/pelaksanaan_manasik/tab_produk_dikembalikan/index-tab-dikembalikan.html'>Produk yang dikembalikan</a>
+  
 </div>
 
 </div>
+
