--- a/www/includes/manasik/perencanaan_manasik/preview-perencanaan.html
+++ b/www/includes/manasik/perencanaan_manasik/preview-perencanaan.html
@@ -110,7 +110,11 @@
     <i class="fa fa-trash-o"></i>
   </button>
 </div>
-<h5 class="title-edit">Preview Perencanaan Kegiatan Manasik</h5>
+<div class="breadcrumb-pusatriyal">
+  <span>Kegiatan Manasik</span>
+  <span>Perencanaan Kegiatan Manasik</span>
+  <span class="active">Preview Perencanaan Kegiatan Manasik</span>
+</div>
 <form id="login-form" class="form" action="" method="post" autocomplete="off" style="margin-bottom: 25mm">
 <input type="hidden" name="_token" id="_token">
 <input type="hidden" name="mp_id" id="mp_id">
