list penjualan manasik done

--- a/www/includes/manasik/pelaksanaan_manasik/tab_produk_dikembalikan/index-tab-dikembalikan.html
+++ b/www/includes/manasik/pelaksanaan_manasik/tab_produk_dikembalikan/index-tab-dikembalikan.html
@@ -69,8 +69,8 @@
       <h5 class="card-title">Card title</h4>
       <h6 class="card-subtitle" style="margin-bottom: 1mm">Some example text. Some example text.</h6>
       <a href="#" class="badge badge-primary card-info-first">Card link</a>
-      <a href="#" class="badge badge-success card-info-second">Another link</a>
+      <a href="#" class="badge card-info-second">Another link</a>
     </div>
   </rawcontent>
-  <script type="text/javascript" src="includes/manasik/pelaksanaan/tab_produk_dikembalikan/js/index-tab-pelaksanaan-commander.js"></script>
+  <script type="text/javascript" src="includes/manasik/pelaksanaan_manasik/tab_produk_dikembalikan/js/index-tab-dikembalikan-commander.js"></script>
 </div>
