--- a/www/includes/manasik/perencanaan_manasik/preview-perencanaan.html
+++ b/www/includes/manasik/perencanaan_manasik/preview-perencanaan.html
@@ -169,4 +169,7 @@
 </form>
 
     <script type="text/javascript" src="includes/manasik/perencanaan_manasik/js/form-perencanaan-commander.js"></script>
+  <script type="text/javascript">
+    display_manasik_plan(preview_manasik_json);
+  </script>
 </div>
