css preview pembayaran otw

--- a/www/includes/manasik/penjualan_manasik/tab_pembayaran/preview-pembayaran.html
+++ b/www/includes/manasik/penjualan_manasik/tab_pembayaran/preview-pembayaran.html
@@ -115,7 +115,7 @@
 <input type="hidden" name="mp_id" id="mp_id">
     <div class="w-100 text-center mb-3">
       <h3>No. Antrian</h3>
-      <span class="badge badge-antrian badge-info badge-pill">
+      <span class="badge-antrian">
           1
       </span>
     </div>
