--- a/www/includes/manasik/penjualan_manasik/index-penjualan-manasik.html
+++ b/www/includes/manasik/penjualan_manasik/index-penjualan-manasik.html
@@ -50,7 +50,7 @@
 </div>
 <div class="list-group list-group-flush">
 
-  <div class="form-group m-3">
+  <div class="form-group m-3" id="div_select">
       <div class="border-bottom border-bottom-1">
         <select class="form-control-plaintext" name="kode_pelaksanaan_manasik" id="kode_pelaksanaan_manasik"></select>
       </div>
