--- a/www/includes/manasik/penjualan_manasik/tab_pembayaran/preview-pembayaran.html
+++ b/www/includes/manasik/penjualan_manasik/tab_pembayaran/preview-pembayaran.html
@@ -112,44 +112,44 @@
 </div>
 <form id="login-form" class="form" action="" method="post" autocomplete="off" style="margin-bottom: 25mm">
 <input type="hidden" name="_token" id="_token">
-<input type="hidden" name="mp_id" id="mp_id">
+<input type="hidden" name="sm_id" id="sm_id">
     <div class="w-100 text-center mb-3">
       <h3>No. Antrian</h3>
       <span class="badge-antrian">
-          1
+          ?
       </span>
     </div>
     <div class="form-group form-tagihan">
-        <label for="tempat_kegiatan" class="label-for">Tagihan</label>
-        <input type="text" readonly="" name="tempat_kegiatan" id="tempat_kegiatan" class="form-control text-right" value="Rp. 10.000,00">
+        <label for="tagihan" class="label-for">Tagihan</label>
+        <input type="text" readonly="" name="tagihan" id="tagihan" class="form-control text-right">
     </div>
     <div class="form-group">
-        <label class="label-for" for="tgl_kegiatan" >Pembeli</label><br>
-        <div class="border-bottom border-bottom-1" id="tanggal">
-          <input type="text" readonly="" name="mp_date" id="tgl_kegiatan" class="form-control-plaintext" >
+        <label class="label-for" for="pembeli" >Pembeli</label><br>
+        <div class="border-bottom border-bottom-1">
+          <input type="text" readonly="" name="pembeli" id="pembeli" class="form-control-plaintext" >
         </div>
     </div>
     <div class="form-group">
-        <label for="tempat_kegiatan" class="label-for">No HP</label><br>
+        <label for="no_hp" class="label-for">No HP</label><br>
         <div class="border-bottom border-bottom-1" id="mp_place">
-          <input type="text" readonly="" name="tempat_kegiatan" id="tempat_kegiatan" class="form-control-plaintext" >
+          <input type="text" readonly="" name="no_hp" id="no_hp" class="form-control-plaintext" >
         </div>
     </div>
     <div class="form-group">
-        <label for="tempat_kegiatan" class="label-for">Alamat</label><br>
-        <div class="border-bottom border-bottom-1" id="mp_place">
-          <input type="text" readonly="" name="tempat_kegiatan" id="tempat_kegiatan" class="form-control-plaintext" >
+        <label for="alamat" class="label-for">Alamat</label><br>
+        <div class="border-bottom border-bottom-1">
+          <input type="text" readonly="" name="alamat" id="alamat" class="form-control-plaintext" >
         </div>
 
     </div>
     <div class="form-group">
-        <label for="tempat_kegiatan" class="label-for">Petugas</label><br>
-        <div class="border-bottom border-bottom-1" id="mp_place">
-          <input type="text" readonly="" name="tempat_kegiatan" id="tempat_kegiatan" class="form-control-plaintext" >
+        <label for="petugas" class="label-for">Petugas</label><br>
+        <div class="border-bottom border-bottom-1">
+          <input type="text" readonly="" name="petugas" id="petugas" class="form-control-plaintext" >
         </div>
     </div>
     <fieldset>
-      <table class="table table-bordered table-striped table-hover" cellpadding="3px">
+      <table class="table table-bordered table-striped table-hover" cellpadding="3px" id="table_produk">
         <thead class="bg-success text-white">
           <tr>
             <th>Nama Barang</th>
@@ -163,8 +163,8 @@
     
 </form>
 
-    <script type="text/javascript" src="includes/manasik/penjualan_manasik/tab_pembayaran/js/pembayaran-commander.js"></script>
+    <script type="text/javascript" src="includes/manasik/penjualan_manasik/tab_pembayaran/js/preview-pembayaran-commander.js"></script>
   <script type="text/javascript">
-    display_manasik_plan(preview_manasik_json);
+    display_pembayaran_json(global_pembayaran_json);
   </script>
 </div>
