routing menu stock done

--- a/platforms/android/app/src/main/assets/www/includes/stock/menu-stock.html
+++ b/platforms/android/app/src/main/assets/www/includes/stock/menu-stock.html
@@ -45,10 +45,9 @@
 </style>
 
 
-<h5 class="title-edit">Kegiatan Manasik</h5>
+<h5 class="title-edit">Stock</h5>
 <div class="list-group list-group-flush">
-  <a href="#" class="list-group-item list-group-item-action listx">Pencatatan Petugas Yang Melakukan Pengambilan</a>
-  <a href="#" class="list-group-item list-group-item-action listx">GPS Tracking</a>
+  <a href="#" class="list-group-item list-group-item-action listx">Daftar Opname Stock</a>
 </div>
 
 </div>
