--- a/www/includes/stock/menu-stock.html
+++ b/www/includes/stock/menu-stock.html
@@ -47,7 +47,7 @@
 
 <h5 class="title-edit">Stock</h5>
 <div class="list-group list-group-flush">
-  <a href="#" class="list-group-item list-group-item-action listx">Daftar Opname Stock</a>
+  <a href="#" pusatriyal-role="routing" pusatriyal-target="includes/stock/opname_stock/index-opname.html" class="list-group-item list-group-item-action listx">Daftar Opname Stock</a>
 </div>
 
 </div>
