list customer & opname stock done

--- a/www/includes/penjualan/customer/index-customer.html
+++ b/www/includes/penjualan/customer/index-customer.html
@@ -69,20 +69,13 @@
 
 </div>
 <div class="card maincard" id="list-for-filter">
-  <div class="card-filter">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <h6 class="card-subtitle" style="margin-bottom: 1mm">Some example text. Some example text.</h6>
-        <a href="#" class="badge badge-primary card-info-first">Card link</a>
-        <a href="#" class="badge card-info-second">Another link</a>
-      </div>
-    </div>
+
 </div>
 
   <rawcontent class='datalist'>
     <div class="card-filter">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title mb-3 font-weight-bold">Card title</h5>
         <h6 class="card-subtitle" style="margin-bottom: 1mm">Some example text. Some example text.</h6>
         <a href="#" class="badge badge-primary card-info-first">Card link</a>
         <a href="#" class="badge card-info-second">Another link</a>
