--- a/www/includes/stock/opname_stock/form-opname.html
+++ b/www/includes/stock/opname_stock/form-opname.html
@@ -195,15 +195,15 @@
               
             </tr>
             <tr>
-              <td colspan="2"></td>
+              <td colspan="2">OR/XXXXXX/XX</td>
             </tr>
             <tr>
               <th>Satuan</th>
-              <td></td>
+              <td>RIYAL</td>
             </tr>
             <tr>
               <th>Qty Sistem</th>
-              <td></td>
+              <td>1</td>
             </tr>
           </tbody>
         </table>
