--- a/www/includes/penjualan/customer/index-customer.html
+++ b/www/includes/penjualan/customer/index-customer.html
@@ -54,7 +54,7 @@
 
 </style>
 
-<button class="btn btn-primary rounded-btn" pusatriyal-role='routing' pusatriyal-target='includes/penjualan/customer/form-customer.html'>
+<button class="btn btn-primary rounded-btn" pusatriyal-role='routing' pusatriyal-target='includes/penjualan/customer/form-customer.html' pusatriyal-callback="customer_form" id="btn-tambah">
   <i class="fa fa-plus"></i>
 </button>
 <div class="breadcrumb-pusatriyal">
