--- a/www/includes/penjualan/customer/preview-customer.html
+++ b/www/includes/penjualan/customer/preview-customer.html
@@ -99,56 +99,61 @@
 
 <div class="pusatriyal-submit btn-group">
   
-  <button class="btn btn-primary rounded-btn" id="btn-simpan">
-    <i class="fa fa-check"></i>
+    <button class="btn btn-warning" id="btn-edit"
+    pusatriyal-role="routing"
+    pusatriyal-target="includes/penjualan/customer/edit-customer.html"
+    pusatriyal-callback="edit_customer_func"
+    >
+    <i class="fa fa-pencil"></i>
+  </button>
+  <button class="btn btn-danger" id="btn-hapus">
+    <i class="fa fa-trash-o"></i>
   </button>
 </div>
 <div class="breadcrumb-pusatriyal">
-  <span class="active">Form Customer</span>
+  <span class="active">Preview Customer</span>
 </div>
-<form id="customer-form" class="form" action="" method="post" autocomplete="off" style="margin-bottom: 25mm">
+<form id="opname-form" class="form" action="" method="post" autocomplete="off" style="margin-bottom: 25mm">
 <input type="hidden" name="_token" id="_token">
-<!-- <input type="hidden" name="sm_id" id="sm_id"> -->
+<input type="hidden" name="c_id" id="c_id">
     <div class="form-group">
         <label for="kode" class="label-for">Kode Customer</label>
-        <input type="text" readonly="" name="kode" id="kode" class="form-control">
+        <div class="border-bottom border-bottom-1">
+          <input type="text" readonly="" name="kode" id="kode" class="form-control-plaintext">
+        </div>
     </div>
     <div class="form-group">
         <label class="label-for" for="nama" >Nama Customer</label><br>
         <div class="border-bottom border-bottom-1">
-          <input type="text" name="nama" id="nama" class="form-control-plaintext" >
+          <input type="text" readonly=""d name="nama" id="nama" class="form-control-plaintext" >
         </div>
     </div>
 
     <div class="form-group">
         <label class="label-for" for="status" >Jenis Customer</label><br>
         <div class="border-bottom border-bottom-1">
-          <select class="form-control" id="jenis_customer" name="status" required>
-            <option value="" selected="">--Pilih Jenis Customer--</option>
-            <option value="B">Barang</option>
-            <option value="R">Riyal</option>
-          </select>
+          <input type="text" readonly="" class="form-control-plaintext" name="status" id="jenis_customer">
         </div>
     </div>
 
     <div class="form-group">
         <label class="label-for" for="email" >Email Customer</label><br>
         <div class="border-bottom border-bottom-1">
-          <input type="text" name="email" id="email" class="form-control-plaintext" >
+          <input type="text" readonly="" name="email" id="email" class="form-control-plaintext" >
         </div>
     </div>
 
     <div class="form-group">
         <label class="label-for" for="nohp" >No HP</label><br>
         <div class="border-bottom border-bottom-1">
-          <input type="text" name="nohp" id="nohp" class="form-control-plaintext" >
+          <input type="text" readonly="" name="nohp" id="nohp" class="form-control-plaintext" >
         </div>
     </div>
     
     <div class="form-group">
         <label class="label-for" for="group" >Group</label><br>
         <div class="border-bottom border-bottom-1">
-          <input type="text" name="group" id="group" class="form-control-plaintext" >
+          <input type="text" readonly="" name="group" id="group" class="form-control-plaintext" >
         </div>
     </div>
 
@@ -156,14 +161,14 @@
     <div class="form-group">
         <label class="label-for" for="group" >Alamat</label><br>
         <div class="border-bottom border-bottom-1">
-          <textarea class="form-control-plaintext" name="alamat"></textarea>
+          <textarea class="form-control-plaintext" id="alamat" readonly="" name="alamat"></textarea>
         </div>
     </div>
 
 </form>
 
-    <script type="text/javascript" src="includes/penjualan/customer/js/form-customer-commander.js"></script>
+    <script type="text/javascript" src="includes/penjualan/customer/js/preview-customer-commander.js"></script>
   <script type="text/javascript">
-    // display_pembayaran_json(global_pembayaran_json);
+    preview_customer_json(json);
   </script>
 </div>
