customer form & edit done

--- a/www/includes/penjualan/customer/edit-customer.html
+++ b/www/includes/penjualan/customer/edit-customer.html
@@ -148,7 +148,9 @@
     <div class="form-group">
         <label class="label-for" for="group" >Group</label><br>
         <div class="border-bottom border-bottom-1">
-          <input type="text" name="group" id="group" class="form-control-plaintext" >
+          <select class="" id="group" name="group">
+            
+          </select>
         </div>
     </div>
 
